--- a/src/app/components/test-bar/test-bar.component.html
+++ b/src/app/components/test-bar/test-bar.component.html
@@ -15,14 +15,14 @@
         <header class="text-4xl text-white h-16"></header>
 
         <ul>
-            <li><a href="/drinks"><img src="assets/images/coctel.png" alt="drinks" class="h-16">Tragos</a></li>
-            <li><a href="/bars" ><img src="assets/images/bar.png" alt="bars" class="h-16">Bares</a></li>
-            <li><a href="/games"><img src="assets/images/game.png" alt="games" class="h-16">Juegos</a></li>
-            <li><a href="/post-drink"><img src="assets/images/post.png" alt="post-drink" class="h-16">Publica</a></li>
-            <li><a href="/drinkly-team"><img src="assets/images/gettoknowus.png" alt="drinkly-team" class="h-16">Conócenos</a></li>
-            <li *ngIf="isAdmin"><a href="/admin"><img src="assets/images/settings.png" alt="admin" class="h-16">Administrar</a></li>
-            <li *ngIf="isLogged"><a href="/profile"><img src="assets/images/user.png" alt="profile" class="h-16">Tu Perfil</a></li>
-            <li *ngIf="!isLogged"><a href="/login"><img src="assets/images/login_.png" alt="login" class="h-16">Entrar</a></li>
+            <li><a routerLink="/drinks" routerLinkActive="active"><img src="assets/images/coctel.png" alt="drinks" class="h-16">Tragos</a></li>
+            <li><a routerLink="/bars" routerLinkActive="active"><img src="assets/images/bar.png" alt="bars" class="h-16">Bares</a></li>
+            <li><a routerLink="/games" routerLinkActive="active"><img src="assets/images/game.png" alt="games" class="h-16">Juegos</a></li>
+            <li><a routerLink="/post-drink" routerLinkActive="active"><img src="assets/images/post.png" alt="post-drink" class="h-16">Publica</a></li>
+            <li><a routerLink="/drinkly-team" routerLinkActive="active"><img src="assets/images/gettoknowus.png" alt="drinkly-team" class="h-16">Conócenos</a></li>
+            <li *ngIf="isAdmin"><a routerLink="/admin" routerLinkActive="active"><img src="assets/images/settings.png" alt="admin" class="h-16">Administrar</a></li>
+            <li *ngIf="isLogged"><a routerLink="/profile" routerLinkActive="active"><img src="assets/images/user.png" alt="profile" class="h-16">Tu Perfil</a></li>
+            <li *ngIf="!isLogged"><a routerLink="/login" routerLinkActive="active"><img src="assets/images/login_.png" alt="login" class="h-16">Entrar</a></li>
         </ul>
 
     </div>
@@ -45,14 +45,14 @@
         <header class="text-4xl text-white h-16"></header>
 
         <ul>
-            <li><a href="/drinks"><img src="assets/images/coctel.png" alt="drinks" class="h-16">Tragos</a></li>
-            <li><a href="/bars" ><img src="assets/images/bar.png" alt="bars" class="h-16">Bares</a></li>
-            <li><a href="/games"><img src="assets/images/game.png" alt="games" class="h-16">Juegos</a></li>
-            <li><a href="/post-drink"><img src="assets/images/post.png" alt="post-drink" class="h-16">Publica</a></li>
-            <li><a href="/drinkly-team"><img src="assets/images/gettoknowus.png" alt="drinkly-team" class="h-16">Conócenos</a></li>
-            <li *ngIf="isAdmin"><a href="/admin"><img src="assets/images/settings.png" alt="admin" class="h-16">Administrar</a></li>
-            <li *ngIf="isLogged"><a href="/profile"><img src="assets/images/user.png" alt="profile" class="h-16">Tu Perfil</a></li>
-            <li *ngIf="!isLogged"><a href="/login"><img src="assets/images/login_.png" alt="login" class="h-16">Entrar</a></li>
+            <li><a routerLink="/drinks" routerLinkActive="active"><img src="assets/images/coctel.png" alt="drinks" class="h-16">Tragos</a></li>
+            <li><a routerLink="/bars" routerLinkActive="active"><img src="assets/images/bar.png" alt="bars" class="h-16">Bares</a></li>
+            <li><a routerLink="/games" routerLinkActive="active"><img src="assets/images/game.png" alt="games" class="h-16">Juegos</a></li>
+            <li><a routerLink="/post-drink" routerLinkActive="active"><img src="assets/images/post.png" alt="post-drink" class="h-16">Publica</a></li>
+            <li><a routerLink="/drinkly-team" routerLinkActive="active"><img src="assets/images/gettoknowus.png" alt="drinkly-team" class="h-16">Conócenos</a></li>
+            <li *ngIf="isAdmin"><a routerLink="/admin" routerLinkActive="active"><img src="assets/images/settings.png" alt="admin" class="h-16">Administrar</a></li>
+            <li *ngIf="isLogged"><a routerLink="/profile" routerLinkActive="active"><img src="assets/images/user.png" alt="profile" class="h-16">Tu Perfil</a></li>
+            <li *ngIf="!isLogged"><a routerLink="/login" routerLinkActive="active"><img src="assets/images/login_.png" alt="login" class="h-16">Entrar</a></li>
         </ul>
 
     </div>
