--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
 
 <div class="flex bg-black fixed top-0 w-full z-10">
   <div class="ml-20 my-1">
-  <a href="/"
+  <a routerLink="/" routerLinkActive="active"
     ><img
       src="assets/images/Drinkly-2.png"
       alt="logo_drinkly"
