--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,8 +13,13 @@
  html {
   box-sizing: border-box;
 } 
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+// @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap");
+// @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+
+//----------------------------------*\
+// Fonts
+//----------------------------------*/
+@import 'assets/fonts.scss';
 
 html {
   line-height: 1.15; /* 1 */
