--- a/src/app/components/juegos/juegos.component.html
+++ b/src/app/components/juegos/juegos.component.html
@@ -1,6 +1,6 @@
 <app-test-bar (message)="getMessage($event)"></app-test-bar> 
 
-<div [ngStyle]="{'margin-left.rem': !sidebar? '0': '16'}" class="move">
+<div [ngStyle]="{'margin-left.rem': !sidebar? '0': '16'}" class="move" style="font-family: 'Open Sans', sans-serif;">
 
   <app-admin-header></app-admin-header>
                 <div class="py-8 sm:px-32 md:px-40">
