home y bar responsive

--- a/src/app/components/admin/admin-home/admin-home.component.html
+++ b/src/app/components/admin/admin-home/admin-home.component.html
@@ -23,7 +23,7 @@
       </div> 
       <!--  -->
       <div *ngIf="!loading" class="max-w-lg h-auto my-6 p-3 pb-6 mt-12 bg-cover  m-auto self-center  shadow">
-          <div class="flex text-4xl font-bold py-2 px-4">Recetas</div>
+          <div class="flex text-4xl font-bold py-2 px-4">Tragos</div>
           <a href="admin/drink">
               <button class="w-full bg-orange-400 hover:bg-orange-600 text-white font-bold py-2 px-32 rounded">
                   Ver recetas
