--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -21,9 +21,9 @@
                   <!-- PRESENTACION -->
                   <div class="md:px-40 bg-black" style="background-image: url(assets/images/bar_fondo_negro.png)">
                     <div class="py-16">
-                    <div class="sm:flex md:flex justify-center px-8 sm:px-64 md:px-64">
-                      <div class="flex justify-center items-center w-2/3 py-8">
-                        <div class="flex justify-center">
+                    <div class="sm:flex md:flex justify-center px-8 sm:px-24 md:px-64">
+                      <div class="flex justify-center sm:justify-end md:justify-end items-center py-8">
+                        <div class="flex justify-center w-1/2 sm:w-2/3 md:w-2/3">
                         <img
                         src="assets/images/Drinkly-white.png"
                         alt="logo_drinkly"
@@ -31,26 +31,18 @@
                         </div>
                         
                       </div>
-                        <div class="flex items-center py-8 sm:py-16 md:py-16">
+                        <div class="flex justify-center items-center sm:w-2/3 md:w-2/3 py-8 sm:py-16 md:py-16">
                           <div>
-                          
-                          <div class="flex text-white lg:text-5xl sm:text-4xl text-2xl pb-4 font-light">
+                          <div class="flex justify-center text-white text-center sm:text-left md:text-left lg:text-left lg:text-5xl sm:text-4xl text-2xl pb-4 font-light">
                             <p>Conviertete en un experto de la coctelería, descubre nuevos lugares y diviertete con tus amigos en Drinkly</p>
                           </div>
-                          <div class="flex items-center">
+                          <div class="flex justify-center sm:justify-start justify-start items-center">
                             <a href="/drinkly-team" class="hover:no-underline">
                                 <div class="text-lg text-center sm:text-xl md:text-xl no-underline py-1 px-8 bg-orange-600 font-light hover:bg-orange-500 text-white rounded">Conócenos
                                 </div>
                             </a>
                           </div>
-                          <!-- <div class="flex text-gray-700 lg:text-3xl text-xl font-light sm:text-2xl">
-                            <p>En nuestra plataforma podrás encontrar una enorme variedad de tragos que podrás preparar desde la comodidad de tu hogar. Te ofrecemos el paso a paso y los ingredientes que vas a necesitar para que puedas degustarla.</p>
-                          </div>  -->
-                          <!-- <div class="flex text-gray-700 lg:text-4xl text-xl font-light sm:text-3xl">
-                            <p>Descubre en Drinkly:</p>
-                          </div>  -->
                           </div>
-                          
                         </div>
                     </div>   
                     </div>
@@ -64,7 +56,7 @@
             <a href="/games" class="hover:no-underline hover:text-orange-500">
               <div class="px-8">
                 <div class="transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-90">
-                  <div class="flex justify-center">
+                  <div class="flex justify-center p-4">
                     <div
                       class="flex justify-center bg-gray-200 shadow-lg hover:shadow-2xl  hover:text-orange-500 rounded-full h-24 w-24 sm:h-48 sm:w-48 md:h-48 md:w-48 flex items-center justify-center">
                       <svg class="fill-current w-1/2 h-1/2" viewBox="0 0 506.161 506.161">
@@ -212,7 +204,7 @@
                     </div>
                   </div>
                   <label
-                    class="flex items-center justify-center text-gray-800 lg:text-4xl text-xl font-light sm:text-3xl py-4 font-light">Juegos</label>
+                    class="flex items-center justify-center text-gray-800 lg:text-4xl text-xl font-light sm:text-3xl pb-4 font-light">Juegos</label>
                 </div>
                 <div class="flex text-gray-700 text-center lg:text-3xl text-xl font-light sm:text-2xl">
                   <p>En nuestra plataforma podrás encontrar una enorme variedad de tragos que podrás preparar desde la comodidad de tu hogar. Te ofrecemos el paso a paso y los ingredientes que vas a necesitar para que puedas degustarla.</p>
@@ -223,7 +215,7 @@
               <a href="/drinks" class="hover:no-underline hover:text-orange-500">
                 <div class="px-8">
                   <div class="transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-90">
-                    <div class="flex justify-center">
+                    <div class="flex justify-center p-4">
                       <div
                         class="flex justify-center bg-gray-200 shadow-lg hover:shadow-2xl  hover:text-orange-500 rounded-full h-24 w-24 sm:h-48 sm:w-48 md:h-48 md:w-48 flex items-center justify-center">
                         <svg class="fill-current w-1/2 h-1/2" viewBox="0 0 511.952 511.952">
@@ -242,7 +234,7 @@
                         </svg>
                       </div>
                     </div>
-                    <label class="flex items-center justify-center text-gray-800 lg:text-4xl text-xl font-light sm:text-3xl py-4 font-light">Tragos</label>
+                    <label class="flex items-center justify-center text-gray-800 lg:text-4xl text-xl font-light sm:text-3xl pb-4 font-light">Tragos</label>
                   </div>
                   <div class="flex text-gray-700 text-center lg:text-3xl text-xl font-light sm:text-2xl">
                     <p>En nuestra plataforma podrás encontrar una enorme variedad de tragos que podrás preparar desde la comodidad de tu hogar. Te ofrecemos el paso a paso y los ingredientes que vas a necesitar para que puedas degustarla.</p>
@@ -253,7 +245,7 @@
             <a href="/bars" class="hover:no-underline hover:text-orange-500">
               <div class="px-8">
                 <div class="transition duration-500 ease-in-out transform hover:-translate-y-1 hover:scale-90">
-                  <div class="flex justify-center">
+                  <div class="flex justify-center p-4">
                     <div
                       class="flex justify-center bg-gray-200 shadow-lg hover:shadow-2xl  hover:text-orange-500 rounded-full h-24 w-24 sm:h-48 sm:w-48 md:h-48 md:w-48 flex items-center justify-center">
                       <svg class="fill-current w-1/2 h-1/2" viewBox="0 0 512.001 512.001">
@@ -313,7 +305,7 @@
                       </svg>
                     </div>
                   </div>
-                  <label class="flex items-center justify-center text-gray-800 lg:text-4xl text-xl font-light sm:text-3xl py-4 font-light">Bares</label>
+                  <label class="flex items-center justify-center text-gray-800 lg:text-4xl text-xl font-light sm:text-3xl pb-4 font-light">Bares</label>
                 </div>
                 <div class="flex text-gray-700 text-center lg:text-3xl text-xl font-light sm:text-2xl">
                   <p>En nuestra plataforma podrás encontrar una enorme variedad de tragos que podrás preparar desde la comodidad de tu hogar. Te ofrecemos el paso a paso y los ingredientes que vas a necesitar para que puedas degustarla.</p>
@@ -336,7 +328,7 @@
                   </div>
                 </div>
                 <!-- DRINK CARDS -->
-                <div class="w-full flex flex-col items-center mb-20 mt-10 sm:px-64 md:px-64">
+                <div class="w-full flex flex-col items-center mt-10 px-12 sm:px-64 md:px-64">
                   <div class="drink_card">
                     <div id="test" class="rounded overflow-hidden border-2 shadow-lg bg-white hover:border-solid hover:border-orange-500 hover:border-opacity-75   transition ease-in duration-200" 
                     *ngFor="let item of showDrinks"   
@@ -373,7 +365,7 @@
                   </div>
                 
                 <!-- FIN DRINK CARDS -->
-                <div class="flex justify-center pb-2">
+                <div class="flex justify-center pb-2 pt-8">
                   <div (click)="addDrink()" class="flex justify-center text-gray-400 hover:text-orange-500">
                     <svg class="fill-current h-1/12 w-1/12 p-4" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
                       xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
@@ -400,10 +392,10 @@
             <!-- FIN DE PREPARALO TU MISMO -->
 
             <!-- ADS -->
-            <div>
+            <div class="py-8">
               <div class="px-8 sm:px-48 md:px-64 py-4 pt-8 text-2xl sm:text-4xl md:text-5xl font-semibold">DISFRUTA POR MENOS</div>
               <!-- ADS CARDS -->
-              <div class="w-full flex flex-col items-center mb-20 mt-10">
+              <div class="w-full flex flex-col items-center mt-10 px-12 sm:px-64 md:px-64">
                 <div class="ad_card">
                   <div
                     class="rounded overflow-hidden border-2 shadow-lg transition"
@@ -418,8 +410,8 @@
                   </div>
                 </div>
               </div>
-              <!-- FIN BAR CARDS -->
-                <div class="flex justify-center pb-8">
+              <!-- FIN ADS CARDS -->
+                <div class="flex justify-center pb-2 pt-8">
                   <div (click)="addAdvertisement()" class="flex justify-center text-gray-400 hover:text-orange-500">
                     <svg class="fill-current h-1/12 w-1/12 p-4" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
                       xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
@@ -446,7 +438,7 @@
           <!-- FIN ADS -->
 
             <!-- BARES DE CARACAS -->
-            <div class="bg-black py-16">
+            <div class="bg-black py-8">
                 <div class="flex justify-center">
                 </div>
                 <div class="flex px-8 sm:px-48 md:px-64 py-4 pt-8 text-2xl text-white sm:text-4xl md:text-5xl font-semibold">
@@ -459,7 +451,7 @@
                   </div>
                 </div>
                 <!-- BAR CARDS -->
-                <div class="w-full flex flex-col items-center mb-20 mt-10 sm:px-64 md:px-64">
+                <div class="w-full flex flex-col items-center mt-10 px-12 sm:px-64 md:px-64">
 
                     <div class="bar_card">
             
@@ -498,8 +490,32 @@
             
                   </div>
                 <!-- FIN BAR CARDS -->
+                <div class="flex justify-center pb-2 pt-8">
+                  <div (click)="addAdvertisement()" class="flex justify-center text-gray-400 hover:text-orange-500">
+                    <svg class="fill-current h-1/12 w-1/12 p-4" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
+                      xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
+                      style="enable-background:new 0 0 512 512;" xml:space="preserve">
+                      <g>
+                        <path d="M256,0C114.833,0,0,114.833,0,256s114.833,256,256,256s256-114.853,256-256S397.167,0,256,0z M256,472.341
+                                                                      c-119.275,0-216.341-97.046-216.341-216.341S136.725,39.659,256,39.659S472.341,136.705,472.341,256S375.295,472.341,256,472.341z
+                                                                      " />
+                      </g>
+                      <g>
+                        <path
+                          d="M355.148,234.386H275.83v-79.318c0-10.946-8.864-19.83-19.83-19.83s-19.83,8.884-19.83,19.83v79.318h-79.318
+                                                                      c-10.966,0-19.83,8.884-19.83,19.83s8.864,19.83,19.83,19.83h79.318v79.318c0,10.946,8.864,19.83,19.83,19.83
+                                                                      s19.83-8.884,19.83-19.83v-79.318h79.318c10.966,0,19.83-8.884,19.83-19.83S366.114,234.386,355.148,234.386z" />
+                      </g>
+                    </svg>
+                    <div>
+                      <div class="flex justify-center">Tu bar tiene una promoción?</div>
+                      <div class="flex justify-center">Compartela con nosotros</div>
+                    </div>
+                  </div>
+              </div>
             </div>
             <!-- FIN BARES DE CARACAS -->
+            
         </div>
     </div>
 
