--- a/src/app/components/post-business/post-business.component.html
+++ b/src/app/components/post-business/post-business.component.html
@@ -166,17 +166,18 @@
                     </div>
                 </div>
                 <div
-                class="h-20 w-full flex justify-center items-center pt-12 pb-12"
+                class="h-30 w-full items-center pt-12 pb-12"
                 style="font-family: 'Open Sans', sans-serif;"
                 >
-                    <div><p class="text-xl md:text-4xl">¡Tu mensaje ha sido enviado!</p></div>
+                    <div><p class="text-xl md:text-4xl flex justify-center">¡Tu mensaje ha sido enviado!</p></div>
+                    <div><p class="text-lg md:text-2xl flex justify-center pb-16 text-center">Ya que tu negocio forma parte de Drinkly, puedes enviar promociones a nuestro email y las publicaremos</p></div>
                 </div>
 
                 <div
                 class="h-20 w-full flex justify-center items-center pt-12 pb-12"
                 style="font-family: 'Open Sans', sans-serif;"
                 >
-                    <div class="w-1/2 flex space-x-4 justify-center">
+                    <div class="w-1/2 flex space-x-6 justify-center">
                         <button
                         (click)="goHome()"
                         class="w-1/3 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
