--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -21,6 +21,12 @@
 
   <div class="w-full flex justify-center items-center h-full">
     <div *ngIf="hasSearchBar" class="pt-2 relative mx-auto text-black w-44">
+      <label
+                class="text-sm opacity-0"
+                for="search"
+              >
+                Header
+      </label>
       <input
         autocomplete="off"
         style="width: 25rem; font-size: 1.4rem;"
