--- a/src/app/components/bars/bars-list/bars-list.component.html
+++ b/src/app/components/bars/bars-list/bars-list.component.html
@@ -19,7 +19,7 @@
 
 
           <div class="rounded overflow-hidden border-2 shadow-lg   hover:border-solid hover:border-orange-500 hover:border-opacity-75   transition ease-in duration-200" 
-           *ngFor="let item of barsAv | filter: filterPost: defaultFilt: zones"
+           *ngFor="let item of barsAv | filter: filterPost: defaultFilt: zones ;let i = index"
            
            >
             <div (click)="detail(item._id)" class="bar_img"
@@ -33,6 +33,16 @@
               <div class="font-bold text-xl md:text-2xl mb-2"> <h1>{{ item.name }} </h1> </div>
               <p class="text-gray-700 text-lg mb-1">
                 {{ getZone(item.location.zone) }}
+                <div class="flex py-2">
+                              <div *ngFor="let s of stars[i] ">
+                                <div *ngIf="s" class="w-8 px-2">
+                                  <img src="../../../../assets/images/star_y.svg" alt="si">
+                                </div>
+                                <div *ngIf="!s" class="w-8 px-2">
+                                  <img src="../../../../assets/images/star_g.svg" alt="si">
+                                </div>
+                              </div>  
+                            </div>
               
             </div>
         </div>
