--- a/src/app/components/drinks/drinks-list/drinks-list.component.html
+++ b/src/app/components/drinks/drinks-list/drinks-list.component.html
@@ -11,13 +11,12 @@
 
   <div *ngIf="!loading" class="w-full"> 
   <div class="w-full">
-    <div class="pt-12 pb-12 flex justify-center">
+    <div class="pt-12  pb-4 md:pb-12 flex justify-center">
       <button
         (click)="goToFilter()"
-        class="md:w-1/5 shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+        class="md:w-1/5 px-8 py-4 md:px-4 md:py-2  shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold  rounded"
         type="button"
-      >
-        Filtrar por ingredientes
+      >Filtrar
       </button>
     </div>     
 
