--- a/src/app/components/drinks/filter-parent/filter-parent.component.html
+++ b/src/app/components/drinks/filter-parent/filter-parent.component.html
@@ -25,6 +25,12 @@
                   <div class="w-full flex flex-col items-center pb-10 pt-10 mt-4" 
                   style="font-family: 'Open Sans', sans-serif;"
                   >
+                  <label
+                class="block   lg:text-right mb-1 md:mb-0 pr-4"
+                for="search"
+              >
+                Buscar por nombre
+              </label>
                       <input
                       class="transition ease-in duration-300 bg-gray-200 mb-6 md:mb-12 appearance-none border-2 border-gray-200 rounded w-8/12 md:w-4/12 py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500 "
                       id="search"
