--- a/src/app/components/profile-page/profile/profile.component.html
+++ b/src/app/components/profile-page/profile/profile.component.html
@@ -2,78 +2,304 @@
 
 <div [ngStyle]="{'margin-left.rem': !sidebar? '0': '16'}" class="move">
 
-  <app-admin-header></app-admin-header>
-  <div *ngIf="userLoading">
-    <app-loader></app-loader>
-  </div>
-            <div *ngIf="!userLoading">
-              <div *ngIf="user" class="p-40">
-                <h3 class="text-4xl">Bienvenido/a, {{ user.f_name }}!</h3>
-                <div class="py-10 items-center">
-                  <button
-                    class="shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
-                    (click)="getOut()"
-                  >
-                    Logout
-                  </button>
-                  <button
-                  class="shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+  <!--PROFILE DESKTOP-->
+  <div *ngIf="!userLoading" id="profile-desktop" style="font-family: 'Open Sans', sans-serif;">
+
+    <!--PROFILE STICKY HEADER-->
+    <div
+      class="bg-gray-400 w-full flex fixed z-10"
+      style="
+        background-image: url(assets/images/profileheader.jpg);
+        background-size: cover;
+        height: 35vh;
+        background-position: center;
+      "
+    >
+    </div>
+    <div class="flex bg-black fixed top-0 w-full z-10">
+      <div class="ml-20 my-1">
+        <a href="/">
+        <img
+          src="assets/images/Drinkly-2.png"
+          alt="logo_drinkly"
+          class="object-scale-down h-16 transition duration-500 ease-in-out transform  hover:scale-110"
+          />
+        </a>  
+      </div>
+    </div>
+    
+    <!--STICKY CARD-->
+    <div id="sticky-profile" class="fixed z-10 rounded-lg border-orange-600 border-solid" style="height: 70vh; background-position: center; background-image: url(assets/images/profileheader.jpg); background-size: cover;">
+    <div class="w-full" id="background-profile" style="height: 70vh;">
+        <div class="w-full flex items-center content-center flex-wrap justify-center" style="height: 30vh;">
+          <div class="w-3/5 flex items-center content-center flex-wrap justify-center" id="icon-profile-div">
+            <img
+                src="assets/images/profileicon3.png"
+                alt="profile"
+                class="h-full cursor-pointer"
+            />
+          </div>
+        </div>  
+        <!--INFORMACIÓN DEL USUARIO-->
+        <div class="w-full pr-4 pl-4" style="height: 40vh;">
+          <div class="w-full text-center text-4xl uppercase text-white font-bold">
+            ¡Bienvenido/a, {{this.user.f_name}}!
+          </div>
+          <div class="w-full pb-8 pt-8 flex justify-center">
+            <div class="w-4/5 text-center text-2xl text-white italic">
+              {{this.randomQuote}}
+            </div>
+          </div>
+          
+          <!--BOTONES-->
+          <div class="pt-12 w-full">
+            <div class="w-full">
+              <div class="w-full flex justify-center">
+                <button
                   (click)="goEdit(user._id)"
-                >
+                  class="w-3/4 lg:w-1/2 shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                  >
                   Editar perfil
                 </button>
-                </div>
               </div>
-
-              
-    
-
-
+              <div class="pt-8 w-full flex justify-center">
+                <button
+                    (click)="getOut()"
+                    class="w-3/4 lg:w-1/2 shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                    >
+                    Cerrar sesión
+                </button>
+              </div>
             </div>
+            <div class="w-full">
+            </div>
+          </div>
+        </div> 
+      </div>
+    </div>
 
-            <div class="w-full flex flex-col items-center mb-20 mt-10" *ngIf="!userLoading">
-              <div class="drink_card">
-                <div id="test" class="rounded overflow-hidden border-2 shadow-lg   hover:border-solid hover:border-orange-500 hover:border-opacity-75   transition ease-in duration-200" 
+    <!--DIV QUE TAPA EL HEADER-->
+    <div class="w-full" style="min-height: 37vh;">
+    </div>
+
+    <!-- CONTENIDO -->
+    <div class="flex" style="min-height: 55vh;">
+      <!--DIV QUE CUBRE EL STICKY-->
+      <div class="w-2/5" style="min-height: 55vh; ">
+      </div>
+      <div class="w-3/5" style="min-height: 55vh;">
+        <div *ngIf="!editProfile" class="w-full">
+          <!--TITULO-->
+          <div class="w-full flex justify-center">
+            <div class="w-1/2 text-center pt-8 pb-8 text-6xl font-bold border-gray-700 border-b-2">
+              TUS FAVORITOS
+            </div>
+          </div>
+          <!--DIV QUE TIENE A LOS FAVORITOS-->
+          <div class="w-full pt-8 flex justify-center">
+            <div class="w-4/5 flex flex-col" style="min-height: 25vh;">
+
+              <div class="drink_card w-full" style="min-height: 25vh;">
+              
+                <div id="test" class="rounded overflow-hidden border-2 shadow-lg   hover:border-solid hover:border-orange-500 hover:border-opacity-75  transition ease-in duration-200" 
                 *ngFor="let item of drinksA"   
                 >
                 
+
+                  <div class="drink_img"
+                    style="  background-position: center;
+                    background-repeat: no-repeat;
+                    background-size: cover;
+                    position: relative; 
+                    height: 25vh;
+                    "
+                    [style.backgroundImage]="'url('+ item.pictures +')'"
+                    (click)="detail(item._id)"
+                    >
+                    <button (click)="fav($event, item._id)" 
+                      class="rounded-full w-12 h-12 lg:h-10 lg:w-10  rounded-full  opacity-75 bg-white m-2 hover:bg-orange-300 transition ease-in duration-300" >
+                          <img  class="p-1" src="https://image.flaticon.com/icons/svg/1828/1828970.svg" alt="fav" *ngIf="!is_fav(item._id)">
+                          <img  class="p-1" src="https://image.flaticon.com/icons/svg/1828/1828614.svg" alt="no-fav" *ngIf="is_fav(item._id)">
+                      </button>
+
+                  </div>
+                  <div (click)="detail(item._id)" class="px-6 py-4">
+                    <div class="font-bold text-xl md:text-2xl mb-2"> 
+                      <h1>{{ item.name }} </h1> 
+                    </div>
+                    <p class="text-gray-700 text-lg mb-1">
+                      Autor: {{ item.owner.name }}
+                    </p>
+                    <p class="text-gray-700 text-lg">
+                      {{ item.owner.category }}
+                    </p>
+                    
+                  </div>
+                </div>
+
+              
+              </div>
+
+
+            </div>
+          </div>
+        </div>
         
-                 <div class="drink_img"
-                  style="  background-position: center;
-                  background-repeat: no-repeat;
-                  background-size: cover;
-                  position: relative; "
-                  [style.backgroundImage]="'url('+ item.pictures +')'"
-                  (click)="detail(item._id)"
+      </div>
+    </div>
+
+  </div>
+
+
+  <!--PROFILE MOBILE-->
+  <div *ngIf="!userLoading" id="profile-mobile" style="font-family: 'Open Sans', sans-serif;">
+
+    <!--PROFILE HEADER-->
+    <div
+      class="bg-gray-400 w-full flex"
+      style="
+        background-image: url(assets/images/profileheader.jpg);
+        background-size: cover;
+        height: 35vh;
+        background-position: center;
+      "
+    >
+    </div>
+    <div class="flex bg-black fixed top-0 w-full z-10">
+      <div class="ml-20 my-1">
+        <a href="/">
+        <img
+          src="assets/images/Drinkly-2.png"
+          alt="logo_drinkly"
+          class="object-scale-down h-16 transition duration-500 ease-in-out transform  hover:scale-110"
+          />
+        </a>  
+      </div>
+    </div>
+    
+    <!--PROFILE CARD-->
+    <div *ngIf="!favorites" class="w-full pt-8 flex items-center justify-center">
+      <div  class="w-4/5 rounded-lg border-orange-500 border-solid ">
+        <div class="w-full flex items-center content-center flex-wrap justify-center" >
+          <div class="w-3/5 flex items-center content-center flex-wrap justify-center" style="height: 15vh;">
+            <div style="height: 15vh; width: 15vh;">
+              <img
+                  src="assets/images/profileicon2.png"
+                  alt="profile"
+                  class="h-full cursor-pointer"
+              />
+            </div>
+          </div>
+        </div>  
+        <!--INFORMACIÓN DEL USUARIO-->
+        <div class="w-full pt-4 pb-8">
+          <div class="w-full text-center text-4xl text-black font-bold uppercase text-gray-900">
+            ¡Bienvenido/a, {{this.user.f_name}}!
+          </div>
+          <div class="w-full pb-8 pt-8 flex justify-center">
+            <div class="w-4/5 text-center text-2xl text-black italic">
+              {{this.randomQuote}}
+            </div>
+          </div>
+          <!--BOTONES-->
+          <div class="pt-8 w-full">
+            <div class="w-full">
+              <div class="w-full flex justify-center">
+                <button
+                  (click)="showFavorites()"
+                  class="w-1/2 shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
                   >
-        
-                  <button (click)="fav($event, item._id)" 
-                  class="rounded-full w-10 h-10 rounded-full  opacity-75 bg-white m-2 hover:bg-orange-300 transition ease-in duration-300" >
+                  Ver favoritos
+                </button>
+              </div>
+              <div class="pt-8 w-full flex justify-center">
+                <button
+                  (click)="goEdit(user._id)"
+                  class="w-1/2 shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                  >
+                  Editar perfil
+                </button>
+              </div>
+              <div class="pt-8 w-full flex justify-center">
+                <button
+                    (click)="getOut()"
+                    class="w-1/2 shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                    >
+                    Cerrar sesión
+                </button>
+              </div>
+            </div>
+            <div class="w-full">
+            </div>
+          </div>
+        </div> 
+      </div>
+    </div>
+
+    <div *ngIf="favorites" class="w-full flex justify-center">
+      <div class="w-1/2 text-center pt-8 pb-8 text-4xl font-bold border-gray-700 border-b-2">
+        TUS FAVORITOS
+      </div>
+    </div>
+
+    <div *ngIf="favorites" class="w-full pt-8 flex items-center justify-center">
+      <div class="w-4/5">
+        <div class="drink_card w-full" style="min-height: 25vh;">
+            <div id="test" class="rounded overflow-hidden border-2 shadow-lg   hover:border-solid hover:border-orange-500 hover:border-opacity-75  transition ease-in duration-200" 
+            *ngFor="let item of drinksA"   
+            >
+            
+
+              <div class="drink_img"
+                style="  background-position: center;
+                background-repeat: no-repeat;
+                background-size: cover;
+                position: relative; 
+                height: 25vh;
+                "
+                [style.backgroundImage]="'url('+ item.pictures +')'"
+                (click)="detail(item._id)"
+                >
+                <button (click)="fav($event, item._id)" 
+                  class="rounded-full w-12 h-12 lg:h-10 lg:w-10  rounded-full  opacity-75 bg-white m-2 hover:bg-orange-300 transition ease-in duration-300" >
                       <img  class="p-1" src="https://image.flaticon.com/icons/svg/1828/1828970.svg" alt="fav" *ngIf="!is_fav(item._id)">
                       <img  class="p-1" src="https://image.flaticon.com/icons/svg/1828/1828614.svg" alt="no-fav" *ngIf="is_fav(item._id)">
                   </button>
-        
-                    
-                    <!-- CAMBIAR A ORANGE CON CLICK -->
-                  </div>
-                 
-                  <div (click)="detail(item._id)" class="px-6 py-4">
-                    <div class="font-bold text-xl md:text-2xl mb-2"> <h1>{{ item.name }} </h1> </div>
-                      <p class="text-gray-700 text-lg mb-1">
-                        Autor: {{ item.owner.name }}
-                      </p>
-                      <p class="text-gray-700 text-lg">
-                        {{ item.owner.category }}
-                      </p>
-                    </div>
-                  </div>
-                </div>
-                <!-- <div style="font-family: 'Open Sans', sans-serif; width: 30%; font-size: medium;" *ngIf="(drinksA | filter: filterPost)?.length==0"
-                class="m-auto"
-                >
-                </div> -->
+
               </div>
-<app-footer></app-footer>
+              <div (click)="detail(item._id)" class="px-6 py-4">
+                <div class="font-bold text-xl md:text-2xl mb-2"> 
+                  <h1>{{ item.name }} </h1> 
+                </div>
+                <p class="text-gray-700 text-lg mb-1">
+                  Autor: {{ item.owner.name }}
+                </p>
+                <p class="text-gray-700 text-lg">
+                  {{ item.owner.category }}
+                </p>
+                
+              </div>
+            </div>
+
+          
+          </div>
+
+      </div>
+    </div>
+
+    
+    
+
+    
+
+  </div>
+
+
+  
+  <button *ngIf="favorites" class="back_btn" (click)="showFavorites()">
+      <img class="p-3" src="assets/images/goback.png" alt="button" >
+  </button>
+  <app-footer></app-footer>
 </div>
 
 
