--- a/src/app/components/profile-page/profile/profile.component.html
+++ b/src/app/components/profile-page/profile/profile.component.html
@@ -29,8 +29,8 @@
     </div>
     
     <!--STICKY CARD-->
-    <div id="sticky-profile" class="fixed z-10 rounded-lg border-orange-600 border-solid" style="height: 70vh; background-position: center; background-image: url(assets/images/profileheader.jpg); background-size: cover;">
-    <div class="w-full" id="background-profile" style="height: 70vh;">
+    <div id="sticky-profile" class="fixed z-10 rounded-lg" style="height: 65vh; background-position: center; background-image: url(assets/images/profileheader.jpg); background-size: cover;">
+    <div class="w-full" id="background-profile" style="height: 65vh;">
         <div class="w-full flex items-center content-center flex-wrap justify-center" style="height: 30vh;">
           <div class="w-3/5 flex items-center content-center flex-wrap justify-center" id="icon-profile-div">
             <img
