--- a/src/app/components/profile-page/profile/profile.component.html
+++ b/src/app/components/profile-page/profile/profile.component.html
@@ -33,8 +33,8 @@
     </div>
     
     <!--STICKY CARD-->
-    <div id="sticky-profile" class="fixed z-10 rounded-lg" style="min-height: 65vh; background-position: center; background-image: url(assets/images/profileheader.jpg); background-size: cover;">
-    <div class="w-full" id="background-profile" style="min-height: 65vh;">
+    <div id="sticky-profile" class="z-10 fixed rounded-lg" style="bottom: 8rem; background-position: center; background-image: url(assets/images/profileheader.jpg); background-size: cover;">
+    <div class="w-full h-full" id="background-profile">
         <div class="w-full flex items-center content-center flex-wrap justify-center" style="height: 30vh;">
           <div class="w-3/5 flex items-center content-center flex-wrap justify-center" id="icon-profile-div">
             <img
@@ -45,11 +45,11 @@
           </div>
         </div>  
         <!--INFORMACIÓN DEL USUARIO-->
-        <div class="w-full pr-4 pl-4" style="height: 40vh;">
+        <div class="w-full pr-4 pl-4" >
           <div class="w-full text-center text-4xl uppercase text-white font-bold">
             ¡Bienvenido/a, {{this.user.f_name}}!
           </div>
-          <div class="w-full pb-8 pt-8 flex justify-center">
+          <div class="w-full lg:pb-8 pt-8 flex justify-center">
             <div class="w-4/5 text-center text-2xl text-white italic">
               {{this.randomQuote}}
             </div>
@@ -303,7 +303,10 @@
   <button *ngIf="favorites" class="back_btn" (click)="showFavorites()">
       <img class="p-3" src="assets/images/goback.png" alt="button" >
   </button>
+  
+  
   <app-footer></app-footer>
+  
 </div>
 
 
