--- a/src/app/components/profile-page/profile/profile.component.html
+++ b/src/app/components/profile-page/profile/profile.component.html
@@ -33,7 +33,7 @@
     </div>
     
     <!--STICKY CARD-->
-    <div id="sticky-profile" class="z-10 fixed rounded-lg" style="bottom: 8rem; background-position: center; background-image: url(assets/images/profileheader.jpg); background-size: cover;">
+    <div id="sticky-profile" class="z-10 fixed rounded-lg" style="max-height: 65vh; bottom: 8rem; background-position: center; background-image: url(assets/images/profileheader.jpg); background-size: cover;">
     <div class="w-full h-full" id="background-profile">
         <div class="w-full flex items-center content-center flex-wrap justify-center" style="height: 30vh;">
           <div class="w-3/5 flex items-center content-center flex-wrap justify-center" id="icon-profile-div">
@@ -49,7 +49,7 @@
           <div class="w-full text-center text-4xl uppercase text-white font-bold">
             ¡Bienvenido/a, {{this.user.f_name}}!
           </div>
-          <div class="w-full lg:pb-8 pt-8 flex justify-center">
+          <div class="w-full lg:pb-4 pt-8 flex justify-center">
             <div class="w-4/5 text-center text-2xl text-white italic">
               {{this.randomQuote}}
             </div>
