--- a/src/app/components/profile-page/profile/profile.component.html
+++ b/src/app/components/profile-page/profile/profile.component.html
@@ -51,7 +51,7 @@
           </div>
           <div class="w-full lg:pb-4 pt-8 flex justify-center">
             <div class="w-4/5 text-center text-xl lg:text-2xl text-white italic">
-              "El día que el amor se convierta en vino tómatelo en serio"
+              {{this.randomQuote}}
             </div>
           </div>
           
