--- a/src/app/components/drinkly-team/drinkly-team.component.html
+++ b/src/app/components/drinkly-team/drinkly-team.component.html
@@ -99,7 +99,7 @@
         <div class="pt-8 w-full flex justify-center">
             <div class="w-4/5 md:w-3/4 flex flex-wrap justify-center items-center">
                 <div class="w-1/3 flex justify-center items-center" style="font-size:10rem">
-                <a href="http://www.w3c.org/" target="_blank" class="a_socialmedia">
+                <a href="https://twitter.com/drinklyofficial" target="_blank" rel="noopener" class="a_socialmedia">
                     <img
                         src="assets/images/twitter1.png"
                         alt="twitter"
@@ -108,7 +108,7 @@
                 </a>
                 </div>
                 <div class="w-1/3 flex justify-center items-center" style="font-size:10rem">
-                <a href="http://www.w3c.org/" target="_blank" class="a_socialmedia">
+                <a href="https://www.facebook.com/Drinkly-102074918252515" target="_blank" rel="noopener" class="a_socialmedia">
                     <img
                         src="assets/images/facebook1.png"
                         alt="facebook"
@@ -118,7 +118,7 @@
                 </a>
                 </div>
                 <div class="w-1/3 flex justify-center items-center" style="font-size:10rem">
-                <a href="http://www.w3c.org/" target="_blank" class="a_socialmedia">
+                <a href="https://www.instagram.com/drinkly.official/" target="_blank" rel="noopener" class="a_socialmedia">
                     <img
                         src="assets/images/insta1.png"
                         alt="instagram"
