--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -382,10 +382,13 @@
                                                                       s19.83-8.884,19.83-19.83v-79.318h79.318c10.966,0,19.83-8.884,19.83-19.83S366.114,234.386,355.148,234.386z" />
                       </g>
                     </svg>
+                    <div class="flex items-center">
                     <div>
-                      <div class="flex">Tienes una receta?</div>
-                      <div class="flex">Compartela con nosotros</div>
+                      <div class="flex items-center">Tienes una receta?</div>
+                      <div class="flex items-center">Compartela con nosotros</div>
+                    </div>  
                     </div>
+                    
                   </div>
                 </div>
             </div>
@@ -428,10 +431,13 @@
                                                                       s19.83-8.884,19.83-19.83v-79.318h79.318c10.966,0,19.83-8.884,19.83-19.83S366.114,234.386,355.148,234.386z" />
                       </g>
                     </svg>
-                    <div>
+                    <div class="flex items-center">
+                      <div>
                       <div class="flex justify-center">Tu bar tiene una promoción?</div>
                       <div class="flex justify-center">Compartela con nosotros</div>
                     </div>
+                    </div>
+                    
                   </div>
               </div>
           </div>
@@ -507,10 +513,13 @@
                                                                       s19.83-8.884,19.83-19.83v-79.318h79.318c10.966,0,19.83-8.884,19.83-19.83S366.114,234.386,355.148,234.386z" />
                       </g>
                     </svg>
-                    <div>
+                    <div class="flex items-center">
+                      <div>
                       <div class="flex justify-center">Tu bar tiene una promoción?</div>
                       <div class="flex justify-center">Compartela con nosotros</div>
                     </div>
+                    </div>
+                    
                   </div>
               </div>
             </div>
