--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -366,8 +366,9 @@
                 
                 <!-- FIN DRINK CARDS -->
                 <div class="flex justify-center pb-2 pt-8">
-                  <div (click)="addDrink()" class="flex justify-center text-gray-400 hover:text-orange-500">
-                    <svg class="fill-current h-1/12 w-1/12 p-4" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
+                  <div (click)="addDrink()" class="justify-center text-gray-400 hover:text-orange-500">
+                    <div class="flex justify-center">
+                    <svg class="fill-current w-1/6 sm:h-1/12 md:h-1/12 p-4" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
                       xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
                       style="enable-background:new 0 0 512 512;" xml:space="preserve">
                       <g>
@@ -381,11 +382,13 @@
                                                                       c-10.966,0-19.83,8.884-19.83,19.83s8.864,19.83,19.83,19.83h79.318v79.318c0,10.946,8.864,19.83,19.83,19.83
                                                                       s19.83-8.884,19.83-19.83v-79.318h79.318c10.966,0,19.83-8.884,19.83-19.83S366.114,234.386,355.148,234.386z" />
                       </g>
-                    </svg>
-                    <div class="flex items-center">
+                    </svg>  
+                    </div>
+                    
+                    <div class="flex justify-center items-center">
                     <div>
-                      <div class="flex items-center">Tienes una receta?</div>
-                      <div class="flex items-center">Compartela con nosotros</div>
+                      <div class="flex items-center justify-center">Tienes una receta?</div>
+                      <div class="flex items-center justify-center">Compartela con nosotros</div>
                     </div>  
                     </div>
                     
@@ -414,31 +417,34 @@
                 </div>
               </div>
               <!-- FIN ADS CARDS -->
-                <div class="flex justify-center pb-2 pt-8">
-                  <div (click)="addAdvertisement()" class="flex justify-center text-gray-400 hover:text-orange-500">
-                    <svg class="fill-current h-1/12 w-1/12 p-4" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
-                      xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
-                      style="enable-background:new 0 0 512 512;" xml:space="preserve">
-                      <g>
-                        <path d="M256,0C114.833,0,0,114.833,0,256s114.833,256,256,256s256-114.853,256-256S397.167,0,256,0z M256,472.341
-                                                                      c-119.275,0-216.341-97.046-216.341-216.341S136.725,39.659,256,39.659S472.341,136.705,472.341,256S375.295,472.341,256,472.341z
-                                                                      " />
-                      </g>
-                      <g>
-                        <path
-                          d="M355.148,234.386H275.83v-79.318c0-10.946-8.864-19.83-19.83-19.83s-19.83,8.884-19.83,19.83v79.318h-79.318
-                                                                      c-10.966,0-19.83,8.884-19.83,19.83s8.864,19.83,19.83,19.83h79.318v79.318c0,10.946,8.864,19.83,19.83,19.83
-                                                                      s19.83-8.884,19.83-19.83v-79.318h79.318c10.966,0,19.83-8.884,19.83-19.83S366.114,234.386,355.148,234.386z" />
-                      </g>
-                    </svg>
-                    <div class="flex items-center">
-                      <div>
-                      <div class="flex justify-center">Tu bar tiene una promoción?</div>
-                      <div class="flex justify-center">Compartela con nosotros</div>
-                    </div>
-                    </div>
-                    
+              <div class="flex justify-center pb-2 pt-8">
+                <div (click)="addAdvertisement()" class="justify-center text-gray-400 hover:text-orange-500">
+                  <div class="flex justify-center">
+                  <svg class="fill-current w-1/6 sm:h-1/12 md:h-1/12 p-4" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
+                    style="enable-background:new 0 0 512 512;" xml:space="preserve">
+                    <g>
+                      <path d="M256,0C114.833,0,0,114.833,0,256s114.833,256,256,256s256-114.853,256-256S397.167,0,256,0z M256,472.341
+                                                                    c-119.275,0-216.341-97.046-216.341-216.341S136.725,39.659,256,39.659S472.341,136.705,472.341,256S375.295,472.341,256,472.341z
+                                                                    " />
+                    </g>
+                    <g>
+                      <path
+                        d="M355.148,234.386H275.83v-79.318c0-10.946-8.864-19.83-19.83-19.83s-19.83,8.884-19.83,19.83v79.318h-79.318
+                                                                    c-10.966,0-19.83,8.884-19.83,19.83s8.864,19.83,19.83,19.83h79.318v79.318c0,10.946,8.864,19.83,19.83,19.83
+                                                                    s19.83-8.884,19.83-19.83v-79.318h79.318c10.966,0,19.83-8.884,19.83-19.83S366.114,234.386,355.148,234.386z" />
+                    </g>
+                  </svg>  
                   </div>
+                  
+                  <div class="flex justify-center items-center">
+                  <div>
+                    <div class="flex items-center justify-center">Tu bar tiene una promoción?</div>
+                    <div class="flex items-center justify-center">Compartela con nosotros</div>
+                  </div>  
+                  </div>
+                  
+                </div>
               </div>
           </div>
           <!-- FIN ADS -->
@@ -497,8 +503,9 @@
                   </div>
                 <!-- FIN BAR CARDS -->
                 <div class="flex justify-center pb-2 pt-8">
-                  <div (click)="addAdvertisement()" class="flex justify-center text-gray-400 hover:text-orange-500">
-                    <svg class="fill-current h-1/12 w-1/12 p-4" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
+                  <div (click)="addAdvertisement()" class="justify-center text-gray-400 hover:text-orange-500">
+                    <div class="flex justify-center">
+                    <svg class="fill-current w-1/6 sm:h-1/12 md:h-1/12 p-4" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
                       xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512"
                       style="enable-background:new 0 0 512 512;" xml:space="preserve">
                       <g>
@@ -512,16 +519,18 @@
                                                                       c-10.966,0-19.83,8.884-19.83,19.83s8.864,19.83,19.83,19.83h79.318v79.318c0,10.946,8.864,19.83,19.83,19.83
                                                                       s19.83-8.884,19.83-19.83v-79.318h79.318c10.966,0,19.83-8.884,19.83-19.83S366.114,234.386,355.148,234.386z" />
                       </g>
-                    </svg>
-                    <div class="flex items-center">
-                      <div>
-                      <div class="flex justify-center">Tu bar tiene una promoción?</div>
-                      <div class="flex justify-center">Compartela con nosotros</div>
+                    </svg>  
                     </div>
+                    
+                    <div class="flex justify-center items-center">
+                    <div>
+                      <div class="flex items-center justify-center">Eres dueño de un bar?</div>
+                      <div class="flex items-center justify-center">Unete a Drinkly</div>
+                    </div>  
                     </div>
                     
                   </div>
-              </div>
+                </div>
             </div>
             <!-- FIN BARES DE CARACAS -->
             
