no favoritos en el profile

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -34,7 +34,7 @@
                         <div class="flex justify-center items-center sm:w-2/3 md:w-2/3 py-8 sm:py-16 md:py-16">
                           <div>
                           <div class="flex justify-center text-white text-center sm:text-left md:text-left lg:text-left lg:text-5xl sm:text-4xl text-2xl pb-4 font-light">
-                            <p>Conviertete en un experto de la coctelería, descubre nuevos lugares y diviertete con tus amigos en Drinkly</p>
+                            <p>Conviértete en un experto de la coctelería, descubre nuevos lugares y diviértete con tus amigos en Drinkly</p>
                           </div>
                           <div class="flex justify-center sm:justify-start justify-start items-center">
                             <a href="/drinkly-team" class="hover:no-underline">
@@ -319,7 +319,7 @@
                 <div class="flex justify-center">
                 </div>
                 <div class="flex px-8 sm:px-48 md:px-64 py-4 pt-8 text-2xl sm:text-4xl md:text-5xl text-white font-semibold">
-                  PREPARALO TU MISMO
+                  PREPÁRALO TÚ MISMO
                   <div class="flex items-center justify-center px-2 sm:px-8 md:px-8">
                     <a href="/drinks" class="hover:no-underline">
                         <div class="text-lg text-center sm:text-xl md:text-xl no-underline py-1 px-8 bg-orange-600 font-light hover:bg-orange-500 text-white rounded">Ver más
@@ -383,8 +383,8 @@
                       </g>
                     </svg>
                     <div>
-                      <div class="flex">Tienes una receta?</div>
-                      <div class="flex">Compartela con nosotros</div>
+                      <div class="flex">¿Tienes una receta?</div>
+                      <div class="flex">Compártela con nosotros</div>
                     </div>
                   </div>
                 </div>
@@ -429,8 +429,8 @@
                       </g>
                     </svg>
                     <div>
-                      <div class="flex justify-center">Tu bar tiene una promoción?</div>
-                      <div class="flex justify-center">Compartela con nosotros</div>
+                      <div class="flex justify-center">¿Tu bar tiene una promoción?</div>
+                      <div class="flex justify-center">Compártela con nosotros</div>
                     </div>
                   </div>
               </div>
@@ -508,8 +508,8 @@
                       </g>
                     </svg>
                     <div>
-                      <div class="flex justify-center">Tu bar tiene una promoción?</div>
-                      <div class="flex justify-center">Compartela con nosotros</div>
+                      <div class="flex justify-center">¿Tu bar tiene una promoción?</div>
+                      <div class="flex justify-center">Compártela con nosotros</div>
                     </div>
                   </div>
               </div>
