--- a/src/app/components/profile-page/profile/profile.component.html
+++ b/src/app/components/profile-page/profile/profile.component.html
@@ -87,11 +87,11 @@
     </div>
 
     <!-- CONTENIDO -->
-    <div class="flex" style="min-height: 55vh;">
+    <div class="flex" style="min-height: 53vh;">
       <!--DIV QUE CUBRE EL STICKY-->
-      <div class="w-2/5" style="min-height: 55vh; ">
+      <div class="w-2/5" style="min-height: 53vh; ">
       </div>
-      <div class="w-3/5" style="min-height: 55vh;">
+      <div class="w-3/5" style="min-height: 53vh;">
         <div *ngIf="!editProfile" class="w-full">
           <!--TITULO-->
           <div class="w-full flex justify-center">
@@ -103,7 +103,23 @@
           <div class="w-full pt-8 flex justify-center">
             <div class="w-4/5 flex flex-col" style="min-height: 25vh;">
 
-              <div class="drink_card w-full" style="min-height: 25vh;">
+              <div *ngIf="drinksA.length==0" class="w-full flex content-center items-center" style="min-height: 25vh;">
+                <div class="w-full text-center">
+                  <div class="w-full text-center">
+                    Parece que no tienes ningún trago en favoritos. ¿Por qué no añades un par?
+                  </div>
+                  <div class="pt-8 w-full text-center flex justify-center content-center items-center">
+                    <button
+                    (click)="goDrinks()"
+                    class="w-1/3 shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                    >
+                        Añadir
+                    </button>
+                  </div>
+                </div>
+              </div>
+
+              <div class="drink_card w-full" *ngIf="drinksA.length>0" style="min-height: 25vh;">
               
                 <div id="test" class="rounded overflow-hidden border-2 shadow-lg   hover:border-solid hover:border-orange-500 hover:border-opacity-75  transition ease-in duration-200" 
                 *ngFor="let item of drinksA"   
@@ -248,7 +264,24 @@
 
     <div *ngIf="favorites" class="w-full pt-8 flex items-center justify-center">
       <div class="w-4/5">
-        <div class="drink_card w-full" style="min-height: 25vh;">
+
+        <div *ngIf="drinksA.length==0" class="w-full flex content-center items-center" style="min-height: 43vh;">
+          <div class="w-full text-center">
+            <div class="w-full text-center">
+              Parece que no tienes ningún trago en favoritos. ¿Por qué no añades un par?
+            </div>
+            <div class="pt-8 w-full text-center flex justify-center content-center items-center">
+              <button
+              (click)="goDrinks()"
+              class="w-1/3 shadow bg-orange-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+              >
+                  Añadir
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div *ngIf="drinksA.length>0" class="drink_card w-full" style="min-height: 25vh;">
             <div id="test" class="rounded overflow-hidden border-2 shadow-lg   hover:border-solid hover:border-orange-500 hover:border-opacity-75  transition ease-in duration-200" 
             *ngFor="let item of drinksA"   
             >
